# cplusplayground

./: !  .gitignore  10math.cpp  1june.cpp  28may.cpp  29.cpp  2nd.cpp  30.cpp  5th.cpp  6  6.cpp  7th.cpp  CMakeCache.txt  CMakeLists.txt  Calculator.cpp  Calculator.h  Makefile  README.md  a.out  abundant.cpp  almostequal.cpp  anagram.cpp  armstrong.cpp  autocalc.cpp  binarysearch.cpp  binarytoDecimal.cpp  blackhole.cpp  bleep_out.cpp  bubblesort.cpp  calculatesquare.cpp  calculator  calculator.pro  calculatorGUI.cpp  celsius.cpp  charfreq.cpp  charsiteration.cpp  chess.cpp  cmake_install.cmake  collatz.cpp  comparetwodoubles.cpp  (+133 more)
.qt/: QtDeploySupport.cmake
QtCalculator/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
calculator_autogen/: deps
calculator_autogen/EWIEGA46WW/: moc_Calculator.cpp  moc_Calculator.cpp.d
calculatorqt/: CMakeLists.txt  main.cpp  mainwindow.ui
gcm.cache/usr/include/c++/13/: vector.gcm
